--- a/src/css/quiz.scss
+++ b/src/css/quiz.scss
@@ -22,6 +22,7 @@
             height: 20px;
             display: inline-block;
             margin-bottom: 10px;
+            visibility: hidden;
         }
 
         .question-group {
@@ -49,6 +50,7 @@
         }
 
         .header-box {
+            text-transform: uppercase;
             width: 100%;
             padding-bottom: 10px;
             display: inline-block;
@@ -63,7 +65,7 @@
         .question-box {
             display: inline-block;
             width: 100%;
-            float: left;
+            float: right;
             font-family: "Guardian Egyptian Web";
             font-weight: 400;
             vertical-align: top;
@@ -74,14 +76,16 @@
         }
 
         .answer-box {
-            width: calc(100% - 160px);
-            float: left;
+            width: 100%;
+            max-width: 400px;
+            margin: auto;
         }
 
         .amount-box {
-            width: 130px;
+            width: 250px;
             height: 30px;
             margin-right: 10px;
+            margin-left: 40px;
             float: right;
             text-align: right;
             line-height: 30px;
@@ -89,6 +93,47 @@
             font-family: "Guardian Egyptian Web";
             color: black;
             border: 2px solid #767676;
+        }
+
+        .humanised_number {
+            width: calc(100% - 320px);
+            height: 40px;
+            line-height: 40px;
+            font-size: 1.4rem;
+            font-family: "Guardian Agate Sans 1 Web";
+            color: #005689;
+            font-weight: 700;
+            float: right;
+            padding-left: 10px;
+        }
+
+        .label-container {
+            width: 100%;
+            height: 15px;
+            display: inline-block;
+        }
+
+        .label1 {
+            width: 250px;
+            height: 15px;
+            float: left;
+            text-align: left;
+            line-height: 10px;
+            font-size: 1rem;
+            font-family: "Guardian Agate Sans 1 Web";
+            color: #005689;
+            margin-left: 45px;
+        }
+
+        .label2 {
+            height: 15px;
+            line-height: 10px;
+            font-size: 1rem;
+            font-family: "Guardian Agate Sans 1 Web";
+            color: #005689;
+            float: left;
+            text-align: left;
+            padding-left: 30px;
         }
 
         .box-divider {
@@ -113,13 +158,20 @@
 
         .visualization-container {
             width: 100%;
-            height: 0px;
-            padding-bottom: 20%;
+            height: 150px;
             display: inline-block;
             margin-bottom: 10px;
         }
 
     }
+
+        #loading-container {
+            width: 100%;
+            height: 0px;
+            padding-bottom: 100%;
+            display: none;
+        }
+
 
     #quiz-prompt {
         box-sizing: border-box;
@@ -150,18 +202,159 @@
 }
 
 
+.is-hidden {
+    visibility: hidden;
+}
+
+.bounce-in {
+    visibility: visible;
+    -webkit-animation: interactive-bounce 0.6s;
+    -moz-animation: interactive-bounce 0.6s;
+    animation: interactive-bounce 0.6s;
+}
+
+@-webkit-keyframes interactive-bounce {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+@-moz-keyframes interactive-bounce {
+  0% {
+    opacity: 0;
+    -moz-transform: scale(0.5);
+  }
+
+  100% {
+    -moz-transform: scale(1);
+  }
+}
+@keyframes interactive-bounce {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.sk-folding-cube {
+  margin: 20px auto;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+}
+
+.sk-folding-cube .sk-cube {
+  float: left;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1); 
+}
+.sk-folding-cube .sk-cube:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+          animation: sk-foldCubeAngle 2.4s infinite linear both;
+  -webkit-transform-origin: 100% 100%;
+      -ms-transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
+}
+.sk-folding-cube .sk-cube2 {
+  -webkit-transform: scale(1.1) rotateZ(90deg);
+          transform: scale(1.1) rotateZ(90deg);
+}
+.sk-folding-cube .sk-cube3 {
+  -webkit-transform: scale(1.1) rotateZ(180deg);
+          transform: scale(1.1) rotateZ(180deg);
+}
+.sk-folding-cube .sk-cube4 {
+  -webkit-transform: scale(1.1) rotateZ(270deg);
+          transform: scale(1.1) rotateZ(270deg);
+}
+.sk-folding-cube .sk-cube2:before {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+.sk-folding-cube .sk-cube3:before {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s; 
+}
+.sk-folding-cube .sk-cube4:before {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+@-webkit-keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+            transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+            transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+            transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  } 
+}
+
+@keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+            transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+            transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+            transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  }
+}
+
+
 
     .chart text {
         font: 10px sans-serif;
+        fill: #b5b2af;
     }
 
     .chart .title {
         font: 15px sans-serif;
+        fill: #b5b2af;
     }
 
     .axis path,
     .axis line {
         fill: none;
-        stroke: #000;
+        stroke: #b5b2af;
         shape-rendering: crispEdges;
     }
