--- a/src/css/quiz.scss
+++ b/src/css/quiz.scss
@@ -1,13 +1,23 @@
+
+
+
 .quiz-container {
 
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-
     width: 100%;
-    max-width: 729px;
     margin: auto;
     outline : none;
+    max-width: 1140px;
+
+    p {
+        font-family: "Guardian Egyptian Web";
+        font-weight: 400;
+        line-height: 1.5rem;
+        font-size: 1.2rem;
+    }
+
 
     .question-container {
 
@@ -63,13 +73,8 @@
         }
 
         .question-box {
-            display: inline-block;
             width: 100%;
-            float: right;
             font-family: "Guardian Egyptian Web";
-            font-weight: 400;
-            vertical-align: top;
-            padding-right: 10px;
             line-height: 1.4rem;
             font-size: 1.2rem;
             margin-bottom: 10px;
@@ -79,14 +84,73 @@
             width: 100%;
             max-width: 400px;
             margin: auto;
+            display: block;
         }
 
+        @media (min-width: 400px) {
+
+            .amount-box {
+                width: 230px;
+                margin-left: 40px;
+                float: right;
+            }
+
+            .humanised_number {
+                width: calc(100% - 300px);
+                padding-left: 10px;
+            }
+
+            .label1 {
+                width: 250px;
+                margin-left: 45px;
+            }
+
+        }
+
+        @media (max-width: 399px) {
+
+            .amount-box {
+                width: calc(80% - 40px);
+                float: left;
+            }
+
+            .humanised_number {
+                width: 70px;
+            }
+
+            .label1 {
+                width: calc(80% - 40px);
+            }
+
+
+        }
+
+        .label1 {
+            height: 15px;
+            float: left;
+            text-align: left;
+            line-height: 10px;
+            font-size: 1rem;
+            font-family: "Guardian Agate Sans 1 Web";
+            color: #a69f99;
+        }
+
+        .label2 {
+            height: 15px;
+            line-height: 10px;
+            font-size: 1rem;
+            font-family: "Guardian Agate Sans 1 Web";
+            color: #a69f99;
+            float: left;
+            text-align: left;
+            padding-left: 10px;
+        }
+
+
         .amount-box {
-            width: 250px;
+            
             height: 30px;
-            margin-right: 10px;
-            margin-left: 40px;
-            float: right;
+            margin-right: 5px;
             text-align: right;
             line-height: 30px;
             font-size: 1.4rem;
@@ -96,7 +160,6 @@
         }
 
         .humanised_number {
-            width: calc(100% - 320px);
             height: 40px;
             line-height: 40px;
             font-size: 1.4rem;
@@ -104,36 +167,13 @@
             color: #005689;
             font-weight: 700;
             float: right;
-            padding-left: 10px;
         }
 
         .label-container {
             width: 100%;
             height: 15px;
             display: inline-block;
-        }
-
-        .label1 {
-            width: 250px;
-            height: 15px;
-            float: left;
-            text-align: left;
-            line-height: 10px;
-            font-size: 1rem;
-            font-family: "Guardian Agate Sans 1 Web";
-            color: #005689;
-            margin-left: 45px;
-        }
-
-        .label2 {
-            height: 15px;
-            line-height: 10px;
-            font-size: 1rem;
-            font-family: "Guardian Agate Sans 1 Web";
-            color: #005689;
-            float: left;
-            text-align: left;
-            padding-left: 30px;
+            margin-top: 20px;
         }
 
         .box-divider {
@@ -165,12 +205,19 @@
 
     }
 
-        #loading-container {
-            width: 100%;
-            height: 0px;
-            padding-bottom: 100%;
-            display: none;
-        }
+    #viz-container  p {
+        font-family: "Guardian Egyptian Web";
+        font-weight: 400;
+        line-height: 1.5rem;
+        font-size: 1.2rem;
+    }
+
+    #loading-container {
+        width: 100%;
+        height: 0px;
+        padding-bottom: 100%;
+        display: none;
+    }
 
 
     #quiz-prompt {
@@ -340,6 +387,17 @@
   }
 }
 
+.magenta {
+    border-bottom: 2px solid #dc2a7d;
+}
+
+.dark_purple {
+    border-bottom: 2px solid #4e0375;
+}
+
+.light_blue {
+    border-bottom: 2px solid #35a4e6;
+}
 
 
     .chart text {
