--- a/src/css/quiz.scss
+++ b/src/css/quiz.scss
@@ -7,9 +7,23 @@
     margin: 0px;
     padding: 0px;
     width: 100%;
-    margin: auto;
     outline : none;
-    max-width: 1140px;
+    
+    @media (min-width: 980px) {
+        max-width: 620px;
+    }
+
+    @media (max-width: 979px) {
+        margin: auto;
+    }
+
+    @media (min-width: 1140px) and (max-width: 1299px){
+        margin-left: 10rem;
+    }
+
+    @media (min-width: 1300px) {
+        margin-left: 15rem;
+    }
 
     p {
         font-family: "Guardian Egyptian Web";
@@ -105,21 +119,29 @@
                 margin-left: 45px;
             }
 
+            .label2 {
+                padding-left: 10px;
+            }
+
         }
 
         @media (max-width: 399px) {
 
             .amount-box {
-                width: calc(80% - 40px);
+                width: calc(70% - 40px);
                 float: left;
             }
 
             .humanised_number {
-                width: 70px;
+                width: 90px;
             }
 
             .label1 {
-                width: calc(80% - 40px);
+                width: calc(70% - 40px);
+            }
+
+            .label2 {
+                padding-left: 20px;
             }
 
 
@@ -143,7 +165,6 @@
             color: #a69f99;
             float: left;
             text-align: left;
-            padding-left: 10px;
         }
 
 
