--- a/src/css/quiz.scss
+++ b/src/css/quiz.scss
@@ -1,6 +1,7 @@
 
 .quiz-container {
 
+    font-size: 100%;
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
@@ -26,12 +27,12 @@
     p {
         font-family: "Guardian Egyptian Web";
         font-weight: 400;
-        line-height: 1.5rem;
-        font-size: 1.2rem;
+        line-height: 1.5em;
+        font-size: 1.2em;
     }
 
     .quizSans {
-        font-size:1rem;
+        font-size:1em;
         color:#767676;
         font-family:'Guardian Text Sans Web', 'Agate Sans', sans-serif;
     }
@@ -83,7 +84,7 @@
             display: inline-block;
             font-family: "Guardian Egyptian Web";
             color: #005689;
-            font-size: 1.4rem;
+            font-size: 1.4em;
             font-weight: 600;
             text-align: center;
             margin-bottom: 10px;
@@ -92,8 +93,8 @@
         .question-box {
             width: 100%;
             font-family: "Guardian Egyptian Web";
-            line-height: 1.4rem;
-            font-size: 1.2rem;
+            line-height: 1.4em;
+            font-size: 1.2em;
             margin-bottom: 10px;
         }
 
@@ -155,7 +156,7 @@
             float: left;
             text-align: left;
             line-height: 10px;
-            font-size: 1rem;
+            font-size: 1em;
             font-family: "Guardian Agate Sans 1 Web";
             color: #a69f99;
         }
@@ -163,7 +164,7 @@
         .label2 {
             height: 15px;
             line-height: 10px;
-            font-size: 1rem;
+            font-size: 1em;
             font-family: "Guardian Agate Sans 1 Web";
             color: #a69f99;
             float: left;
@@ -177,7 +178,7 @@
             margin-right: 5px;
             text-align: right;
             line-height: 30px;
-            font-size: 1.4rem;
+            font-size: 1.4em;
             font-family: "Guardian Egyptian Web";
             color: black;
             border: 2px solid #767676;
@@ -186,7 +187,7 @@
         .humanised_number {
             height: 40px;
             line-height: 40px;
-            font-size: 1.4rem;
+            font-size: 1.4em;
             font-family: "Guardian Agate Sans 1 Web";
             color: #005689;
             font-weight: 700;
@@ -211,7 +212,7 @@
             height: 20px;
             margin: auto;
             line-height: 20px;
-            font-size: 0.8rem;
+            font-size: 0.8em;
             font-family: "Guardian Agate Sans 1 Web";
             font-weight: 400;
         }
@@ -233,13 +234,13 @@
 
         font-family: "Guardian Egyptian Web";
         font-weight: 400;
-        line-height: 1.5rem;
-        font-size: 1.2rem;
+        line-height: 1.5em;
+        font-size: 1.2em;
 
     }
 
     #viz-container p.quizSans {
-        font-size:1rem;
+        font-size:1em;
         color:#767676;
         font-family:'Guardian Text Sans Web', 'Agate Sans', sans-serif;
     }
